<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="in.ezeefinance.customer.entities.UserInfo" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/name"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.name}"
                    android:textColorHighlight="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:layout_constraintTop_toBottomOf="@id/nameContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.mobile}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:layout_constraintTop_toBottomOf="@id/mobileContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.email}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                app:layout_constraintEnd_toStartOf="@id/dateContainer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/gender"
                    android:text="@{user.gender}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:hint="@string/date_of_birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/genderContainer"
                app:layout_constraintTop_toBottomOf="@id/emailContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.dob}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/documentTypeContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:hint="@string/proof_identity"
                app:layout_constraintEnd_toStartOf="@+id/documentIdContainer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.documentType}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/documentIdContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:hint="@string/document_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/documentTypeContainer"
                app:layout_constraintTop_toBottomOf="@id/dateContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.documentId}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pinCodeContainer"
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_code"
                app:layout_constraintTop_toBottomOf="@id/documentTypeContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.pinCode}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:layout_constraintTop_toBottomOf="@id/pinCodeContainer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextDisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{user.address}" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>